2004-03-22 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b135

	* Bugfix: Changed fixed path in layout/watermarkform.inc to the correct from config.php

	* Changes in watermark code:
		- Added direction in body Tag.
		- Replaced includes with $GALLERY_BASEDIR
		- Adapted HTML Output to the other popups.
		- Added some missing translation.
		- Added checks from edit_watermark into watermark_album.

	* New: Added option for global switching on/off comments.

2004-03-21  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b134

	* Change: Fix 'out of bounds' errors resulting from the index 
	  changes for deleting images.

	* Change: Fix redirect typo/bug in delete_photo

2004-03-21 Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b133

	* Bugfix: Allow users to have blank captions on upload.  This
		broke when the ability to caption from file date stamp
		was added.

2004-03-21 Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b132

	* Change: Task #84759, Patch #781169, RFE #411261. Add watermarking
		support (visible watermarks by overlaying an image)

2004-03-21 Christian Mohn <ch-moh@online.no> 1.4.3-cvs-b131

        * Change: Added LimitRequestBody setting for Apache2 in
		  setup/php_value.template (sapi_apache2.c module)
		  This is patch #920442 - Thanks to Niels Basjes
		  for submitting

2004-03-21 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b130

	* Bugfix: Removed lines in slideshow that were sent before header. 
		  They caused slideshow to display errors when embedded.

2004-03-21 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b129

	* Changed:  Replaced some includes/requirements of Variables.

2004-03-21 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b128

	* Change: Tweaked add_photos*
		  - Bugfix: Selectboxes for count of inputboxes.
		  - Fixed HTML errors.
		  - Tidied html outout up.
		  - Beatified output.
		  - Some rewordings.

	* Bugfix: config.php was loaded to late in Config Wizard.
		  So the language was set to Browserlanguage everytime.
