@@ -1,5 +1,8 @@
 <?php /* $Id$ */ ?>
-<?php global $commentdraw, $i, $index;
+<?php 
+
+	global $commentdraw, $i, $index;
+
 // If the border color is not passed in, we do a black/white combo
 if ($commentdraw["bordercolor"]) {
         $borderIn = $commentdraw["bordercolor"];
@@ -9,15 +12,12 @@ if ($commentdraw["bordercolor"]) {
 
 $pixelImage = "<img src=\"" . getImagePath('pixel_trans.gif') . "\" width=\"1\" height=\"1\" alt=\"\">";
 
-?><tr>
-    <td colspan="3">
-    </td>
-  </tr>
-  <tr>
-    <td width="15%"></td>
-    <td width="70%" class="modcaption">
-      <br>
-<?php echo _("From:") ?> <b><?php echo $commentdraw["name"] ?></b> &nbsp;
+?>
+<!-- Begin Comment -->
+<tr>
+	<td width="15%"></td>
+	<td width="70%" class="modcaption">
+	<br><?php echo _("From:") ?> <b><?php echo $commentdraw["name"] ?></b> &nbsp;
 <?php
   if ($gallery->user->isAdmin()) {
       echo "@ &nbsp;";
@@ -26,8 +26,7 @@ $pixelImage = "<img src=\"" . getImagePath('pixel_trans.gif') . "\" width=\"1\" 
   }
 ?>
         (<?php echo $commentdraw["datePosted"] ?>)
-      <br>
-      <?php echo $commentdraw["comment"] ?> 
+	<br><?php echo $commentdraw["comment"] ?>
 <?php
 if ($gallery->user->canWriteToAlbum($gallery->album)) {
 	$url = "do_command.php?cmd=delete-comment&index=$index&comment_index=$i";
@@ -35,7 +34,8 @@ if ($gallery->user->canWriteToAlbum($gallery->album)) {
 	echo "$buf";
 }
 ?>
-      <br><br>
-    </td>
-    <td width="15%"></td>
-  </tr>
+	<br><br>
+	</td>
+	<td width="15%"></td>
+</tr>
+<!-- End Comment -->
