@@ -1,3 +1,10 @@
+2004-03-22 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b136
+
+	* Change: dos2unix all *.php files.
+	  (Thanks to Vallimar)
+
+	* New: Global Comment switch is now functional.
+
 2004-03-22 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b135
 
 	* Bugfix: Changed fixed path in layout/watermarkform.inc to the correct from config.php
